--- a/remote/package.json
+++ b/remote/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "mobx-vue-lite": "^0.4.1",
     "vue": "^3.3.11"
   },
   "devDependencies": {
+    "@originjs/vite-plugin-federation": "^1.3.4",
     "@vitejs/plugin-vue": "^4.5.2",
     "vite": "^5.0.8"
   }
